修复了表格两端显示问题,原因是在添加了fixed属性之后给表格设置了高度

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_795956_db7vv2ilf5s.css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>cyn-assets</title>
+    <title>丁艾资产管理系统</title>
   </head>
   <body>
     <noscript>
